<resources>
    <string name="app_name">Android Starter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search">Search</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="followers">Followers:</string>
    <string name="following">Following</string>
    <string name="name">Name:</string>
    <string name="company">Company:</string>
    <string name="blog">Blog:</string>
    <string name="notes">Notes:</string>
    <string name="save">Save</string>
</resources>