<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivUserProfile"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvFollowerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivUserProfile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:textStyle="bold"
        android:text="@string/followers"/>
    <TextView
        android:id="@+id/tvFollower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivUserProfile"
        app:layout_constraintStart_toEndOf="@+id/tvFollowerTitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        tools:text="121"/>

    <TextView
        android:id="@+id/tvFollowingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivUserProfile"
        app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/following"/>
    <TextView
        android:id="@+id/tvFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivUserProfile"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        tools:text="121"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFollowerTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="5"
                android:text="@string/name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvNameTitle"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Jone" />

            <TextView
                android:id="@+id/tvCompanyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="5"
                android:text="@string/company"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvCompanyTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="Apple" />

            <TextView
                android:id="@+id/tvBlogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="5"
                android:text="@string/blog"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

            <TextView
                android:id="@+id/tvBlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tvBlogTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvCompany"
                tools:text="www.apple.com" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tvNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cvUserInfo"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/notes"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvNote"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/edit_text_border"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteTitle" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/save"/>
</androidx.constraintlayout.widget.ConstraintLayout>